--- a/css/gallery.css
+++ b/css/gallery.css
@@ -33,7 +33,6 @@
 .all-foto{
     margin: 0 auto;
     height: 100%;
-    padding: 2rem 0rem;
 
     max-width: 100%;
     max-height: 100%;
@@ -61,32 +60,46 @@
 
 
 .buttons_main_min{
-    height: 720px;
+    height: 450px;
     width: 60px;
     font-size: 50px;
     background: rgb(0, 174, 255);
 }
 .img_min{
-    width: 1280px;
-    height: 720px;
+    width: 800px;
+    height: 450px;
 }
 .buttons_main_average{
-    height: 900px;
+    height: 720px;
     width: 60px;
     font-size: 50px;
     background: rgb(0, 174, 255);
 }
 .img_average{
-    width: 1600px;
-    height: 900px;
+    width: 1280px;
+    height: 720px;
 }
 .buttons_main_max{
-    height: 1080px;
+    height: 792px;
     width: 60px;
     font-size: 50px;
     background: rgb(0, 174, 255);
 }
 .img_max{
-    width: 1920px;
-    height: 1080px;
+    width: 1408px;
+    height: 792px;
+}
+
+
+.start{
+    height: 50px;
+    width: 160px;
+    font-size: 20px;
+    background: rgb(6, 182, 0);
+}
+.stop{
+    height: 50px;
+    width: 160px;
+    font-size: 20px;
+    background: rgb(182, 0, 24);
 }
