--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ margin: 0 30px;
     background-color: #020305;
     background-attachment: fixed;
     background-size: cover;
-    padding-left: 400px;
+    padding-left: 500px;
     padding-top: 150px; 
     font-size: 50px;
 }
@@ -253,9 +253,20 @@ form{
     background-color: #4CAF50; /* Green */
     color: white;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-    
+
 }
 
+.ChangeTheme{
+    border-radius: 8px;
+    height: 40px;
+    font-size: 15px;
+    border: 2px solid #4c6baf; /* Green */
+    background-color: rgb(0, 174, 255);
+
+}
+.ChangeTheme:hover{
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
 
 
 
