--- a/css/DragNDrop.css
+++ b/css/DragNDrop.css
@@ -61,3 +61,15 @@ body {
     margin: 50px 0 20px 0;
     text-align: center;
 }
+
+.table{
+    text-align: justify;
+    border-collapse: collapse;
+   /*убираем пустые промежутки между ячейками*/
+   border: 2px solid grey;
+   /*устанавливаем для таблицы внешнюю границу серого цвета толщиной 1px*/
+}
+
+th, td {
+    border: 1px solid grey;
+ }
