fix map loader and navigation system

--- a/views/maps.html
+++ b/views/maps.html
@@ -1,7 +1,7 @@
 <div class="bg-white p-4 m-3 rounded-3 shadow" id = "map-loader">
-    <div class="row justify-content-between pb-2">
+    <div class="pb-2">
         <p class="col">Basic map</p>
-        <button class="col-sm-auto btn btn-outline-secondary btn-sm" onclick="loader()"><i class="bi bi-map px-1"></i>Load map</button>
+        <div id="map" class="loader-container"></div>
     </div>
 </div>
 
